--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ text-align: center;
 } 
 </style>
 <script type="text/javascript">
+<script type='text/javascript' src='//pl22978283.highcpmgate.com/87/69/03/876903fba7c247b099ffb160282425ac.js'></script>
 window.onload=function() //executes when the page finishes loading
 {
 document.getElementById('clk').style.di splay = 'block';
@@ -40,7 +41,7 @@ return;
 time").innerHTML=count;
 }
 </script> 
-  
+<script type='text/javascript' src='//pl22978283.highcpmgate.com/87/69/03/876903fba7c247b099ffb160282425ac.js'></script> 
   
   
   
@@ -49,7 +50,7 @@ time").innerHTML=count;
     <title> Signup To Get Free Cash  </title>
     <!-- Pest Your Blogger HTML Post Code Below  -->
 
-<blockquote style="border: none; margin: 0px 0px 0px 40px; padding: 0px;"><p style="text-align: center;">&nbsp;</p><div class="separator" style="clear: both; text-align: center;"><a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh5XP2RQniM1NH-eQ8-mxjS-uZmfyN22bgZhUxmJPSJ61Qj9tZYU_FmQsfShEYUH0jEEtFQIcmphDNwyIl_-EDPixt9pAaWTOtQFZ8oWg0OXtKUb4kBq0nBZ1NYl5WW8YFAaI4f0wgYyv-R_3AHWmEkS3DMy33lWxcTFlLVvGyCUkdhDynD12DIyTudDEYZ/s1280/Untitled%20design%20(1).png" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="720" data-original-width="1280" height="289" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh5XP2RQniM1NH-eQ8-mxjS-uZmfyN22bgZhUxmJPSJ61Qj9tZYU_FmQsfShEYUH0jEEtFQIcmphDNwyIl_-EDPixt9pAaWTOtQFZ8oWg0OXtKUb4kBq0nBZ1NYl5WW8YFAaI4f0wgYyv-R_3AHWmEkS3DMy33lWxcTFlLVvGyCUkdhDynD12DIyTudDEYZ/w464-h289/Untitled%20design%20(1).png" width="464" /></a></div><br /><p></p></blockquote><p><br /></p><p><br /></p><p style="text-align: center;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;hi get for $100 free usdt claim now&nbsp;</p><p style="text-align: center;"></p><div class="separator" style="clear: both; text-align: center;"><a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh6eZHQ2ZNpgXGeUBiPpkbRQM09tLPdelhnnlRcQo90AfnpCWeynfYPHiN37l1ulSGTNtd_6ExNn9AmVjsIJGFp6M5OFiReLSnFbqRoH3MNweLlUMTRe_bney-g5zJ-UUtrs5YlK2AipFUOpTqrEzMgafpKl6xcqqqMPYioj_xvKhr8kzKUJmaisSHvsLl8/s900/9BUreeBRJo8X4MBK9fUAnoRrq6eZLv7aTTEiCEy5j.gif" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="320" data-original-width="900" height="114" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh6eZHQ2ZNpgXGeUBiPpkbRQM09tLPdelhnnlRcQo90AfnpCWeynfYPHiN37l1ulSGTNtd_6ExNn9AmVjsIJGFp6M5OFiReLSnFbqRoH3MNweLlUMTRe_bney-g5zJ-UUtrs5YlK2AipFUOpTqrEzMgafpKl6xcqqqMPYioj_xvKhr8kzKUJmaisSHvsLl8/s320/9BUreeBRJo8X4MBK9fUAnoRrq6eZLv7aTTEiCEy5j.gif" width="320" /></a></div><br />&nbsp;<p></p>
+<p style="text-align: center;"></p><div class="separator" style="clear: both; text-align: center;"><a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj5oIr-k6KnxLlSfygfSI_SjAsropcjIdLk_cY_NGUEp2F28iPtmreF4RgcOcfk0zNGigtka2EC0_2JCEoQypZxWb4e0hsmLqvB8vM_TOLMsFrYeJrbd8QHZMnrJrEvBGyQpR5EJitd-ITl_9smungKyIsRoD1VWtuoA-F2nP-1gGoWKHcv-HUWkPxzZa4S/s320/tether-7172951_1280.jpg" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="160" data-original-width="320" height="160" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj5oIr-k6KnxLlSfygfSI_SjAsropcjIdLk_cY_NGUEp2F28iPtmreF4RgcOcfk0zNGigtka2EC0_2JCEoQypZxWb4e0hsmLqvB8vM_TOLMsFrYeJrbd8QHZMnrJrEvBGyQpR5EJitd-ITl_9smungKyIsRoD1VWtuoA-F2nP-1gGoWKHcv-HUWkPxzZa4S/s1600/tether-7172951_1280.jpg" width="320" /></a></div><br />&nbsp;<p></p><p style="text-align: center;">cxjbc<span>&nbsp; &nbsp; ceuwcjh<span>&nbsp; &nbsp; cebchbcjewbcewvu</span></span></p><p style="text-align: center;"><span><span><br /></span></span></p><p style="text-align: center;"><span><span><br /></span></span></p><p style="text-align: center;"><span></span></p><div class="separator" style="clear: both; text-align: center;"><a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgzKyTHykI8wPyCf3U7nBSNcS_Yq6J6EkbV54zigR5smMbo6DUOIcCit8q3oY3mUy7vxZuhKM2cpdVnIk8Q3nCrSwk3SEOCxHML2CQKaVOxbYApXUTsfxAu0Vo-zY0Cym4SyyL44rVvrIpxhiNsfl3Uh33F9ABxIXaBZl0azZ4YtP7cy9Uv9B4YuxgQw7pP/s900/9BUreeBRJo8X4MBK9fUAnoRrq6eZLv7aTTEiCEy5j.gif" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="320" data-original-width="900" height="114" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgzKyTHykI8wPyCf3U7nBSNcS_Yq6J6EkbV54zigR5smMbo6DUOIcCit8q3oY3mUy7vxZuhKM2cpdVnIk8Q3nCrSwk3SEOCxHML2CQKaVOxbYApXUTsfxAu0Vo-zY0Cym4SyyL44rVvrIpxhiNsfl3Uh33F9ABxIXaBZl0azZ4YtP7cy9Uv9B4YuxgQw7pP/s320/9BUreeBRJo8X4MBK9fUAnoRrq6eZLv7aTTEiCEy5j.gif" width="320" /></a></div><br /><span><br /></span><p></p>
 
   
   
